adicionando modo focus

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,7 +6,10 @@
     <title>BeeCatalyst</title>
   </head>
   <body>
-    <h1>Hello!</h1>
+    <div style="width: 200px">
+      <input type="checkbox" id="spoiler" name="spoiler" checked />
+      <label for="spoiler">Ativar anti-poiler</label>
+    </div>
     <script src="./popup.js"></script>
   </body>
 </html>
